WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247147
Regression(iOS 16.1) Use of Shared Workers cause Web Content process crash in non-default-browser WKWebViews
https://bugs.webkit.org/show_bug.cgi?id=247147
Summary
Regression(iOS 16.1) Use of Shared Workers cause Web Content process crash in...
Chris Dumez
Reported
2022-10-27 13:17:09 PDT
Use of Shared Workers cause Web Content process crash in non-default-browser WKWebViews since
253592@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-10-27 13:18:13 PDT
<
rdar://101562445
>
Chris Dumez
Comment 2
2022-10-27 13:20:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5872
EWS
Comment 3
2022-10-28 07:31:10 PDT
Committed
256099@main
(a665aab7969f): <
https://commits.webkit.org/256099@main
> Reviewed commits have been landed. Closing PR #5872 and removing active labels.
Chris Dumez
Comment 4
2022-10-28 14:16:42 PDT
***
Bug 247087
has been marked as a duplicate of this bug. ***
Chris Dumez
Comment 5
2022-10-31 11:20:10 PDT
Reverted by
https://github.com/WebKit/WebKit/pull/5965
Chris Dumez
Comment 6
2022-10-31 11:20:16 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/5965
EWS
Comment 7
2022-10-31 11:24:24 PDT
Committed
256160@main
(fdf21de4a484): <
https://commits.webkit.org/256160@main
> Reviewed commits have been landed. Closing PR #5965 and removing active labels.
Chris Dumez
Comment 8
2022-10-31 13:11:59 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/5972
EWS
Comment 9
2022-11-01 06:59:34 PDT
Committed
256185@main
(f6816a3f3c66): <
https://commits.webkit.org/256185@main
> Reviewed commits have been landed. Closing PR #5972 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug