Cherry-pick f6816a3f3c66. rdar://problem/101562445

Regression(iOS 16.1) Use of Shared Workers cause Web Content process crash in non-default-browser WKWebViews
    https://bugs.webkit.org/show_bug.cgi?id=247147
    rdar://101562445

    Reviewed by Geoffrey Garen.

    253592@main made the initialization of WorkerScriptLoader::m_clientIdentifier
    conditional on service workers being enabled. However, this wasn't correct
    since shared workers rely on this data member too.

    This clientIdentifier gets sent over IPC at some point and fails decoding
    when not initialized, leading to the WebProcess getting killed.

    * LayoutTests/http/tests/navigation/resources/shared-worker-script.js:
    (self.onconnect):
    * LayoutTests/http/tests/workers/shared/shared-worker-with-service-workers-disabled-expected.txt: Added.
    * LayoutTests/http/tests/workers/shared/shared-worker-with-service-workers-disabled.html: Added.
    * LayoutTests/platform/mac-wk1/TestExpectations:
    * LayoutTests/platform/win/TestExpectations:
    * Source/WebCore/workers/WorkerScriptLoader.cpp:
    (WebCore::WorkerScriptLoader::~WorkerScriptLoader):
    (WebCore::WorkerScriptLoader::loadAsynchronously):
    * Source/WebCore/workers/WorkerScriptLoader.h:

    Canonical link: https://commits.webkit.org/256185@main

Canonical link: https://commits.webkit.org/252432.751@safari-7614-branch